--- a/calculator.css
+++ b/calculator.css
@@ -5,9 +5,8 @@
     justify-content: center;
     align-items: center;
 }
-
 /* first theme */
- .first{
+.first{
     width:30%;
     margin-left: auto;
     margin-right: auto;
@@ -18,6 +17,7 @@
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(14, 29, 14, 0.731);
+    position: relative;
 }
  .first #screen{
     background-color: rgba(14, 29, 14, 0.731);
@@ -25,6 +25,13 @@
     min-height: 6rem;
     color: antiquewhite;
     font-size: 1.5em;
+}
+.first .time{
+    position: absolute;
+    left: 82%;
+    top: 14%;
+    background-color: rgba(240, 248, 255, 0.155);
+    border: none;
 }
  .first .sci-op{
     margin-left: auto;
